<!--
  ~ Copyright (C) 2005-2017 Qihoo 360 Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not
  ~ use this file except in compliance with the License. You may obtain a copy of
  ~ the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed To in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  ~ WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  ~ License for the specific language governing permissions and limitations under
  ~ the License.
  -->

<resources>
    <string name="app_name">RePluginSample演示示例</string>
    <string name="startAppOne">Start app one</string>
    <string name="startDemo3">Start Kotlin Plugin (demo3) </string>
    <string name="startDemo4">Start plugin webview</string>
    <string name="startAppOneForResult">Start plugin app one(forResult)</string>
    <string name="startAppOneLoadFragment">Start plugin app one(Fragment from app one)</string>
    <string name="installPluginFromAssets">Install or update external plugin</string>
</resources>