<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2005-2017 Qihoo 360 Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not
  ~ use this file except in compliance with the License. You may obtain a copy of
  ~ the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed To in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  ~ WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  ~ License for the specific language governing permissions and limitations under
  ~ the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_start_app_one"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/startAppOne" />

    <Button
        android:id="@+id/btn_start_plugin_app_one_for_result"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/startAppOneForResult" />

    <Button
        android:id="@+id/btn_load_fragment_from_app_one"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/startAppOneLoadFragment" />

    <Button
        android:id="@+id/btn_start_demo3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/startDemo3" />

    <Button
        android:id="@+id/btn_start_demo4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/startDemo4" />

    <Button
        android:id="@+id/btn_install_apk_from_assets"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/installPluginFromAssets" />
</LinearLayout>
